--- a/Discord-Infinite-Ping/Discord-Infinite-Ping/Form1.resx
+++ b/Discord-Infinite-Ping/Discord-Infinite-Ping/Form1.resx
@@ -66,7 +66,7 @@
     <value>159, 12</value>
   </data>
   <data name="minDelayBetweenPingsInput.Size" type="System.Drawing.Size, System.Drawing">
-    <value>92, 23</value>
+    <value>213, 23</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="minDelayBetweenPingsInput.TabIndex" type="System.Int32, mscorlib">
@@ -85,7 +85,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;minDelayBetweenPingsInput.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="minDelayBetweenPingsLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -112,7 +112,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;minDelayBetweenPingsLabel.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="maxDelayBetweenPingsLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -139,7 +139,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;maxDelayBetweenPingsLabel.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="maxDelayBetweenPingsInput.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -148,7 +148,7 @@
     <value>159, 52</value>
   </data>
   <data name="maxDelayBetweenPingsInput.Size" type="System.Drawing.Size, System.Drawing">
-    <value>92, 23</value>
+    <value>213, 23</value>
   </data>
   <data name="maxDelayBetweenPingsInput.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -166,13 +166,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;maxDelayBetweenPingsInput.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="startButton.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left</value>
   </data>
   <data name="startButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 96</value>
+    <value>12, 99</value>
   </data>
   <data name="startButton.Size" type="System.Drawing.Size, System.Drawing">
     <value>75, 23</value>
@@ -193,7 +193,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;startButton.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="stopButton.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom</value>
@@ -202,7 +202,7 @@
     <value>NoControl</value>
   </data>
   <data name="stopButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>94, 96</value>
+    <value>110, 99</value>
   </data>
   <data name="stopButton.Size" type="System.Drawing.Size, System.Drawing">
     <value>75, 23</value>
@@ -223,7 +223,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;stopButton.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="saveButton.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -235,7 +235,7 @@
     <value>NoControl</value>
   </data>
   <data name="saveButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>176, 94</value>
+    <value>297, 97</value>
   </data>
   <data name="saveButton.Size" type="System.Drawing.Size, System.Drawing">
     <value>75, 25</value>
@@ -256,6 +256,36 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;saveButton.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="Hide.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom</value>
+  </data>
+  <data name="Hide.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="Hide.Location" type="System.Drawing.Point, System.Drawing">
+    <value>205, 99</value>
+  </data>
+  <data name="Hide.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
+  </data>
+  <data name="Hide.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
+  <data name="Hide.Text" xml:space="preserve">
+    <value>Hide</value>
+  </data>
+  <data name="&gt;&gt;Hide.Name" xml:space="preserve">
+    <value>Hide</value>
+  </data>
+  <data name="&gt;&gt;Hide.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;Hide.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;Hide.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -265,7 +295,7 @@
     <value>7, 15</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>263, 138</value>
+    <value>384, 141</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value> Discord Infinite Ping</value>
